Fix bottom background alignment

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -132,7 +132,7 @@ h3.forward, h3.rsvp {
 
   background-color: transparent;
   background-position-x: 25%;
-  background-position-y: -340px;
+  background-position-y: -290px;
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-image: url("../img/flower-bot.jpg");
